--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  table_calendar: ^3.2.0
+  intl: ^0.20.2
+  flutter_riverpod: ^3.2.1
+  shared_preferences: ^2.5.4
+  google_fonts: ^8.0.0
+  uuid: ^4.5.2
 
 dev_dependencies:
   flutter_test:
